--- a/src/NavConfig.json
+++ b/src/NavConfig.json
@@ -4,20 +4,27 @@
       {
         "identity": "main",
         "tools": [
-          {
+        {
             "identity": "DevHome.Dashboard",
             "assembly": "DevHome.Dashboard",
             "viewFullName": "DevHome.Dashboard.Views.DashboardView",
             "viewModelFullName": "DevHome.Dashboard.ViewModels.DashboardViewModel",
             "icon": "f246"
-          },
-          {
+        },
+        {
             "identity": "DevHome.SetupFlow",
             "assembly": "DevHome.SetupFlow",
             "viewFullName": "DevHome.SetupFlow.Views.SetupFlowPage",
             "viewModelFullName": "DevHome.SetupFlow.ViewModels.SetupFlowViewModel",
             "icon": "f156"
-          }
+        },
+        {
+            "identity": "DevHome.Projects",
+            "assembly": "DevHome.Projects",
+            "viewFullName": "DevHome.Projects.Views.ProjectsPage",
+            "viewModelFullName": "DevHome.Projects.ViewModels.ProjectsViewModel",
+            "icon": "f156"
+        }
         ]
       }
     ]
