--- a/tools/Projects/src/DevHome.Projects.csproj
+++ b/tools/Projects/src/DevHome.Projects.csproj
@@ -15,6 +15,9 @@
 
   <ItemGroup>
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Windows.CsWin32" Version="0.2.206-beta">
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.0.1" />
   </ItemGroup>
 
