--- a/nuget.config
+++ b/nuget.config
@@ -9,6 +9,7 @@
     <clear />
     <add key="DevHomeDependencies" value="https://pkgs.dev.azure.com/ms/DevHome/_packaging/DevHomeDependencies/nuget/v3/index.json" />
     <add key="SDKLocalSource" value=".\pluginsdk\_build" />
+    <add key="Local" value="R:\packages" />
   </packageSources>
   <disabledPackageSources>
     <clear />
